extensions/attributegen/testdata/operation.yaml
- output_attribute: istio.responseClass
  phase: AFTER_RESPONSE
  match:
  - value: 2xx
    condition: response.code >= 200 && response.code <= 299
  - value: 3xx
    condition: response.code >= 300 && response.code <= 399
  - value: "404"
    condition: response.code == 404
  - value: "401"
    condition: response.code == 401
  - value: "403"
    condition: response.code == 403
  - value: "429"
    condition: response.code == 429
  - value: "503"
    condition: response.code == 503
  - value: 5xx
    condition: response.code >= 500 && response.code <= 599
  - value: 4xx
    condition: response.code >= 400 && response.code <= 499
